@@ -1,3 +1,6 @@
+2012-03-24
+ * replace /\ etc. in expanded variables with _, fix path problems with targets containting / in name
+
 2012-03-09
  * removed FWHM extimates, HAM (should be handled by external scripts)
  * removed XPLATE, YPLATE (transation to WCS only metadata
